# CS575_FinalProject

./: CMakeLists.txt  PID.cpp  README.md  cartesian.cpp  imu_test.cpp  main.cpp  post_map_process.cpp  robot_test.cpp  simple.cpp  stream_test.cpp  telemetry_test.cpp  test_drive.cpp  test_python.cpp  ultra_simple.cpp  vision_test.cpp
hitec_controller/: HiTechnicController.cpp  HiTechnicController.h  HiTechnicDcMotorController.cpp  HiTechnicDcMotorController.h  HiTechnicMotor.cpp  HiTechnicMotor.h  HiTechnicServo.cpp  HiTechnicServo.h  HiTechnicServoController.cpp  HiTechnicServoController.h
include/rplidar/: rplidar.h
python/: plugins.py  python_common.h
robot/: Common.cpp  Common.h  Drivetrain.cpp  Drivetrain.h  Lidar.cpp  Lidar.h  Robot.cpp  Robot.h
rplidar/sdk/include/: rplidar_cmd.h  rplidar_driver.h  rplidar_protocol.h  rptypes.h
rplidar/sdk/src/: rplidar_driver.cpp  rplidar_driver_TCP.h  rplidar_driver_impl.h  rplidar_driver_serial.h  sdkcommon.h
rplidar/sdk/src/arch/linux/: net_serial.cpp  net_serial.h  net_socket.cpp  thread.hpp  timer.cpp  timer.h
rplidar/sdk/src/arch/macOS/: net_serial.cpp  net_serial.h  net_socket.cpp  thread.hpp  timer.cpp  timer.h
rplidar/sdk/src/arch/win32/: arch_win32.h  net_serial.cpp  net_serial.h  net_socket.cpp  timer.cpp  timer.h  winthread.hpp
rplidar/sdk/src/hal/: abs_rxtx.h  assert.h  byteops.h  event.h  locker.h  socket.h  thread.cpp  thread.h  types.h  util.h
